# baal-dashboard

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  Makefile  main.py  mypy.ini  pyproject.toml
backend/app/: active_learning.py  al_manager.py  api.py  app.py  config.py  utils.py
backend/app/routers/: active_learning.py
backend/app/types/: active_learning.py
backend/config/: cifar10.json
backend/scripts/: gen_data.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: index.js
frontend/src/Components/: DatasetInfo.jsx  Header.jsx  InputTable.jsx  LabellingStat.jsx  MetricPlot.jsx
frontend/src/Components/Card/: Card.js  CardBody.js  CardHeader.js
frontend/src/Components/Charts/: BarChart.js  LineChart.js
