[tool.poetry]
name = "baal-dashboard"
version = "0.1.0"
description = "Dashboard to present active learning progress"
authors = ["Dref360 <frederic.branchaud.charron@gmail.com>"]
license = "ApacheV2"

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.15.0"
fastapi = "^0.68.1"
baal = "^1.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
